--- a/emails/templates/emailverification.html
+++ b/emails/templates/emailverification.html
@@ -72,12 +72,7 @@
                         padding: 0;
                         width: 50%;
                       ">
-                      <img 
-                        src="https://res.cloudinary.com/getabacus/image/upload/v1662898786/email/logo-img.png"
-                        alt="Abacus logo"
-                        width="125px"
-                        style="height:auto;display:block;"
-                      />
+                      <svg xmlns="http://www.w3.org/2000/svg" width="114" height="19" fill="none" viewBox="0 0 114 19"><path fill="#4440FF" d="M.2 18 7.96 1.2h4.5L4.7 18H.2Z"></path><path fill="#000000" d="M13.276 18V1.2h4.62l7.8 11.3h.38V1.2h3.9V18h-4.54l-7.9-11.3h-.36V18h-3.9Zm24.059 0-6.5-16.8h4.12l4.92 13.02h.52l4.92-13.02h4.14L42.935 18h-5.6Zm12.985 0V1.2h14.14v3.26H54.3v3.68h9.8v2.88h-9.8v3.7h10.16V18H50.32Zm31.747 0h-3.96l-2.76-5h-5.42v5h-3.98V1.2h8.82c4.5 0 6.88 2.1 6.88 6.02 0 2.34-1.14 4.04-2.86 4.98l3.28 5.8ZM69.927 4.54v5.4h4.62c2.02 0 3.14-.92 3.14-2.7 0-1.78-1.12-2.7-3.14-2.7h-4.62Zm20.125 14.02c-5.12 0-7.82-1.82-7.8-5.76h3.6c.14 1.58 1.44 2.58 4.2 2.6 2.6 0 4.02-.88 4.02-2.2 0-1.16-.94-1.74-2.94-2.08l-2.08-.36c-3.18-.56-6.34-1.4-6.34-5.06 0-3.18 2.68-5.06 7.38-5.06 4.38 0 7.42 1.54 7.46 5.7h-3.58c-.26-1.52-1.44-2.54-3.96-2.54-2.28 0-3.48.78-3.48 2.08 0 1.02.82 1.66 2.54 1.98l1.82.32c3.2.58 7.14 1.12 7.14 5.14 0 3.34-2.74 5.24-7.98 5.24Zm9.095-.56V1.2h14.14v3.26h-10.16v3.68h9.8v2.88h-9.8v3.7h10.16V18h-14.14Z"></path></svg>
                     </td>
 
                     <!-- ---- Social link ---- -->
@@ -103,7 +98,7 @@
                               width: 24px;
                             ">
                               <a
-                                href="http://www.twitter.com/trustabacus">
+                                href="http://www.twitter.com/inverse">
                                 <img
                                   src="https://res.cloudinary.com/getabacus/image/upload/v1662898787/email/twitter-icon-img.png"
                                   
@@ -180,10 +175,10 @@
                 OTP: <strong style="color: #000000;">{{.otp}}</strong><br/><br/>
 
                 The code expires in {{.expiry}}.<br/>
-                If you did not initiate this action, please send an email to <a href="mailto:support@trustabacus.com" style="box-sizing: border-box; color: #095DF3; font-size: 14px; text-decoration: none;">support@trustabacus.com</a><br/><br/>
+                If you did not initiate this action, please send an email to <a href="mailto:support@inverse.wtf" style="box-sizing: border-box; color: #095DF3; font-size: 14px; text-decoration: none;">support@inverse.wtf</a><br/><br/>
 
                 Best,<br/>
-                The Abacus team<br/><br/>
+                The Inverse team<br/><br/>
               </p>
             </td>
           </tr>
@@ -200,12 +195,12 @@
                 color: #585858;
               ">
                 Questions or support? Contact us at <a 
-                  href="mailto:support@trustabacus.com"
+                  href="mailto:support@inverse.wtf"
                   style="
                     color: #226DF4;
                     text-decoration: underline;
                   ">
-                    support@trustabacus.com
+                    support@invese.wtf
                 <a
                   href="#"
                   style="
@@ -222,7 +217,7 @@
                 font-family: system-ui, arial, sans-serif;
                 color: #585858;
               ">
-                © 2023 Abacus
+                © 2023 Inverse
               </p>
             </td>
           </tr>
