temp : remove logo

--- a/emails/templates/emailverification.html
+++ b/emails/templates/emailverification.html
@@ -72,12 +72,12 @@
                         padding: 0;
                         width: 50%;
                       ">
-                      <img 
+                      <!-- <img 
                       src="https://res.cloudinary.com/getabacus/image/upload/v1688643464/inverse/icon/inverse.png"
                       alt="Abacus logo"
                       width="125px"
                       style="height:auto;display:block;"
-                    />
+                    /> -->
                     </td>
 
                     <!-- ---- Social link ---- -->
