--- a/emails/templates/inverse-email-criteria.html
+++ b/emails/templates/inverse-email-criteria.html
@@ -143,7 +143,7 @@
 
                   <p>
                     <img
-                      src="https://images.unsplash.com/photo-1579546929518-9e396f3cc809?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                      src={{.itemImage}}
                       width="100%"
                       height="100%"
                       style="object-fit: cover; border-radius: 12px"
